Bug 1112822 - Don't allow MP4Reader to decode if someone shut it down. r=mattwoodrow, a=sledru